test/integration/bad/log_suffix_bad2.stan
functions {
    real foo_log(real alpha, real beta){
     return normal_lupdf(alpha | beta, 1);
   }
}

